# bad_apple_cube

./: .gitignore  LICENSE.txt  README.md  blender_script.py  img_to_locations.py  pyproject.toml  vid_to_frames.py
