[tool.poetry]
name = "bad_apple_cube"
version = "0.1.0"
description = ""
authors = ["b0und"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
opencv-python = "^4.5.1"
Pillow = "^8.2.0"
numba = "^0.53.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
rope = "^0.18.0"
pylint = "^2.7.4"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
